fix be done